# SBRWVI

./: .travis.yml  LICENSE  README.md
arduino/Encoder/: Encoder.ino
arduino/hardware_tests/: README.md
arduino/system/: system.ino
docs/: components.md  pins-arduino.md
linters/: prerequisites.sh  run_cppcheck.sh  run_cpplint.sh
model/STL/: 5V_forward_keeper.STL  Battery_box_adapted.STL  Body_case.STL  Camera_plate.STL  Camera_stick.STL  Chassis.STL  Claw.STL  Driver_plate.STL  Elbow_connector.STL  Elbow_connector_L.STL  Encoder_connector.STL  Forearm_L.STL  Forearm_R.STL  Forearm_motor_cover.STL  Forearm_motor_mount.STL  Gear_D23_new.STL  Gear_D23_sep_inner.STL  Gear_D23_sep_outer.STL  Gear_D23_upper.STL  Gear_D23_upper__sep_inner.STL  Gear_D23_upper__sep_outer.STL  Grab_base.STL  Grab_clamp.STL  Grab_push_circle.STL  Hands_support.STL  Head_gear.STL  Head_rotation_module.STL  Plate_holder_back.STL  Push_mechanism.STL  Push_mechanism_L.STL  Push_st_cap.STL  Reductor_adapter.STL  Rotation_mechanism_case.STL  SM_stick.STL  Servo_connector.STL  Servo_support.STL  Shaft_cross_adapter.STL  Shoulder_motor_cover.STL  Shoulder_motor_cover_L.STL  Shoulder_motor_mount.STL  (+1 more)
model/details/: 18650.SLDPRT  5V_forward_keeper.SLDPRT  Adapter.SLDPRT  Arduino_Mega.SLDPRT  Arduino_nano.SLDPRT  Assembly.SLDASM  BMS.SLDPRT  Battery_box.SLDPRT  Battery_box_adapted.SLDPRT  Bearing_16mm.SLDPRT  Bearing_5x11x5mm.SLDPRT  Body_case.SLDPRT  Body_part.SLDPRT  Camera.SLDPRT  Camera_module_assembly.SLDASM  Chassis.SLDASM  (+72 more)
source/remote/: CMakeLists.txt  run.sh
source/remote/src/: main.cpp
(+66 files in other folders)
